Fixed forced-scrollbar on members and members-activity tables
no issue

- some browser/OS setting combinations will always show a fixed scrollbar when `overflow: scroll` is used instead of `overflow: auto`

--- a/ghost/admin/app/styles/components/lists.css
+++ b/ghost/admin/app/styles/components/lists.css
@@ -315,7 +315,7 @@ ul.nostyle li {
 /* Horizontally scrolling list */
 .gh-list-scrolling {
     position: relative;
-    overflow: scroll;
+    overflow: auto;
     max-width: calc(100% + 96px);
     height: calc(100vh - 129px);
     margin: 0 -48px -81px;
